--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "copy-to-clipboard": "^3.3.1",
     "fontsource-roboto": "^2.1.4",
     "google-translate-api": "^2.3.0",
     "node-sass": "^4.14.1",
